# RedVersion

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Source/: CMakeLists.txt
Source/ConsoleGame/: CMakeLists.txt  ConsoleGame.hpp
Source/RedVersion/: CMakeLists.txt
